# spider

./: .gitignore  BUILD_INSTRUCTIONS.md  MAINTENANCE.md  README.md  build_deb.sh  clear_cache.sh  install.sh  meson.build  package-deb.sh  pyproject.toml  spider.in
build-aux/: org.domain.Spider.json
data/: meson.build  org.domain.Spider.desktop.in  org.domain.Spider.gschema.xml  org.domain.Spider.metainfo.xml
debian/: changelog  control  copyright  rules
src/: meson.build
src/spider/: __init__.py  main.py
src/spider/capture/: portal.py
src/spider/core/: coordinator.py  models.py
src/spider/ocr/: engine.py  ensemble.py  keystore.py  paddle.py  registry.py  tesseract.py
src/spider/storage/: db.py
src/spider/ui/: application.py  history.py  preferences.py  window.py
src/spider/vision/: preprocessor.py
tests/: conftest.py  test_coordinator.py  test_database.py  test_integration.py  test_ocr_accuracy.py  test_preprocessor.py  test_tesseract_engine.py
