[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "spider"
version = "0.1.0"
description = "Linux OCR Desktop Application"
authors = ["omarxkhalid"]
packages = [{from = "src", include = "spider"}]
homepage = "https://github.com/omarxkhalid/spider"
repository = "https://github.com/omarxkhalid/spider"

[tool.poetry.dependencies]
python = "^3.10"
PyGObject = "^3.42.0"
opencv-python = "^4.8.0"
pytesseract = "^0.3.10"
Pillow = "^10.0.0"

[tool.poetry.scripts]
spider = "spider.main:main"
