install_data('org.domain.Spider.desktop.in',
  rename: 'org.domain.Spider.desktop',
  install_dir: join_paths(get_option('datadir'), 'applications')
)

install_data('org.domain.Spider.gschema.xml',
  install_dir: join_paths(get_option('datadir'), 'glib-2.0/schemas')
)

install_data('org.domain.Spider.png',
  install_dir: join_paths(get_option('datadir'), 'icons/hicolor/512x512/apps')
)

install_data('org.domain.Spider.metainfo.xml',
  install_dir: join_paths(get_option('datadir'), 'metainfo')
)
